# nfelodcm

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: tests.yml
nfelodcm/: __init__.py  nfelodcm.py  smoke.py  tests.py
nfelodcm/Engine/: DCMTable.py  __init__.py
nfelodcm/Engine/Assignments/: __init__.py  assignment.py
nfelodcm/Engine/Assignments/assignments/: __init__.py  desc_based_plays.py  fastr_team_repl.py  format_player_file.py  format_qb_file.py  nflverse_game_id_repl.py  penalty_formatting.py  player_stats_repl.py  score_clean.py  temp_players_handle.py
nfelodcm/Engine/Assignments/resources/: team_id_map.py
nfelodcm/Engine/Primatives/: DataPull.py  DataRead.py  Freshness.py  LocalIO.py  PullManager.py  README.md  Retry.py  TableMap.py  __init__.py
nfelodcm/Engine/Types/: __init__.py  iter_state.py  json_model.py  season_state.py  table_config.py  table_state.py
nfelodcm/Maps/: coaches.json  filmmargins.json  ftn_charting.json  games.json  hfa.json  logos.json  market_data.json  nfelo_games.json  nfelounits_elo.json  nfelounits_faced.json  nfelounits_units.json  nfelounits_units_normalized.json  nfelounits_value_created.json  participants.json  pbp.json  player_stats.json  player_stats_season.json  players.json  qb_meta.json  qbelo.json  qbr.json  rosters.json  srs_ratings.json  stadiums.json  stadiums_rolling_stats.json  team_stadiums.json  team_stadiums_rolling_stats.json  wepa.json  wt_ratings.json
nfelodcm/Utilities/: __init__.py  checks.py  env.py  extract_map.py  global_variables.json  load_maps.py  paths.py  retrieve_season_state.py  set_season_state.py
tests/: README.md  conftest.py  test_assignments.py  test_env.py  test_freshness.py  test_iter_state.py  test_maps.py  test_public_api.py  test_pull_manager.py  test_retry.py  test_table_config.py  test_types.py
