[build-system]
requires = ["setuptools","wheel","pandas","requests"]
build-backend = "setuptools.build_meta"

[project]
name = "nfelodcm"
version = "0.1.24"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "UBIQ", email="contact@ubiq.com"}
]

maintainers = [
    {name = "UBIQ", email="contact@ubiq.com"}
]

description = "Python package for loading and caching CSVs hosted on github into pandas dataframes"

keywords = ['nfl','nflfastR','ubiq','data']

classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10'
]

dependencies = [
    "setuptools>=67.6.0",
    "wheel",
    "pandas>=1.5.3",
    "requests",
]

[tool.setuptools]
packages = ["nfelodcm"]
package-dir = {"nfelodcm" = '.'}
package-data = {'nfelodcm' = ['nfelodcm/**']}

[project.urls]
homepage = "https://github.com/NolanUBIQ/NFLcdm"
repository = "https://github.com/NolanUBIQ/NFLcdm.git"
