[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfelodcm"
version = "0.2.21"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Robert Greer", email="70054621+greerreNFL@users.noreply.github.com"}
]

maintainers = [
    {name = "Robert Greer", email="70054621+greerreNFL@users.noreply.github.com"}
]

description = "Python package for loading and caching CSVs hosted on github into pandas dataframes"

keywords = ['nfl','nflfastR','nfelo']

classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]

dependencies = [
    "pandas>=1.5",
    "requests",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["nfelodcm"]
package-dir = {"nfelodcm" = '.'}
package-data = {'nfelodcm' = ['nfelodcm/**']}

[project.urls]
homepage = "https://github.com/greerreNFL/nfelodcm"
repository = "https://github.com/greerreNFL/nfelodcm.git"
